# pg-slide-harvester

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pgppt.py  pyproject.toml
.github/workflows/: ci.yml
config/: categories.json  sources.json
tests/: test_naming.py  test_reports.py
